# kanban_rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 20230301120029_users.up.sql  20230301121642_tickets.down.sql  20230301121642_tickets.up.sql
mysql/: my.cnf
src/: error.rs  main.rs
src/api/: user.rs
