[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0"
tokio = { version = "1.15.0", features = ["full"]}
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
ulid = "1"
dotenv = "0.15"
serde = { version = "1", features = ["derive"]}
